# awsops

./: aws_configs.py  pyproject.toml
awsops/: aws_configs.py
awsops/manager/: manager.py
awsops/services/: database.py  ec2.py  iam.py  lambda_aws.py
