[project]
name = "AWSOps"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "Really simple AWS"
readme = "readme.md"
dynamic = ["dependencies"]
#urls = { "repository" = "https://github.com/Somerandomguy10111/..." }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}